@@ -1154,6 +1154,13 @@
         </varlistentry>
 
         <varlistentry>
+          <term><option>--hold</option></term>
+          <listitem>
+            <para>Causes the terminal to be kept around after the child command has terminated</para>
+          </listitem>
+        </varlistentry>
+
+        <varlistentry>
           <term><option>--display</option> <parameter>display</parameter></term>
           <listitem>
             <para>Open terminal window on the X screen specified by <parameter>display</parameter>.</para>
